tests/checker/diagnostics/0976_mli_nested_path_zeroary_overapplied_04.mli.infer.expected
File "0976_mli_nested_path_zeroary_overapplied_04.mli", line 1:
Warning 24 [bad-module-name]: bad source file name: 0976_mli_nested_path_zeroary_overapplied_04 is not a valid module name.

File "0976_mli_nested_path_zeroary_overapplied_04.mli", line 7, characters 14-37:
7 | val x_delta : int Outer_delta.Inner.t
                  ^^^^^^^^^^^^^^^^^^^^^^^
Error: The type constructor Outer_delta.Inner.t expects 0 argument(s),
       but is here applied to 1 argument(s)
